--- a/bundles/bundle.properties
+++ b/bundles/bundle.properties
@@ -126,7 +126,7 @@ block.tiered-7a-a-water-extractor-iii.description = Extracts underground water a
 block.tiered-7a-b-cultivator-ii.name = Spore Harvester
 block.tiered-7a-b-cultivator-ii.description = Collects spore from atmospheres more efficiently than smaller version.
 block.tiered-7a-b-cultivator-iii.name = Biomass Incubator
-block.tiered-7a-b-cultivator-iii.description = Collects and produce spore pods at huge amount. Incubator may needs a lot of water input to work.
+block.tiered-7a-b-cultivator-iii.description = Collects and produce spore pods at huge amount. Incubator needs a lot of water input to work. Caution: Produces so much spore pods when placed on spore tiles that it cannot unload fast enough by itself. Use unloaders to help.
 
 block.tiered-7a-c-oil-extractor-ii.name = Advanced Oil Rig
 block.tiered-7a-c-oil-extractor-ii.description = Produces large amount of oil. Inputs are unchanged.
